k8s/celery-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      serviceAccountName: django-sa
      containers:
      - name: celery
        image: asia-south1-docker.pkg.dev/devopsdjango/django-repo/django-app:latest
        command: ["celery", "-A", "tutorials.celery", "worker", "-l", "info"]
        volumeMounts:
        - name: gcp-key
          mountPath: /var/secrets/google
          readOnly: true
      volumes:
      - name: gcp-key
        secret:
          secretName: gcp-sa-key
